# ebook-wgpu-gpu-surfaces

./: Cargo.toml  README.md
examples/ch01/: matrix_multiplication.rs  matrix_multiplication.wgsl
examples/ch02/: indices_comp.wgsl  simple_surface.rs  simple_surface_comp.wgsl  simple_surface_func.wgsl
examples/ch03/: parametric_surface.rs  parametric_surface_comp.wgsl  parametric_surface_func.wgsl
examples/ch04/: super_shape.rs  super_shape_comp.wgsl
